# true-ledger-core

./: Cargo.toml  LICENSE  README.md  block_0000716846.json  block_0000750750.json  block_0000892621.json  pubspec.yaml  true_ledger_state.json  user_identity.json
 assets/: ipfs_plugin_loader.html  ipfs_worker.html  ipfs_worker.js  mock_manifest.json
 assets/plugins/ifrs_accounting/: index.js  manifest.json  schema.ipldsch  ui.js
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/trueledger/true_ledger_core/: MainActivity.kt
assets/: ipfs_worker.html
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  pubspec.yaml
lib/models/: plugin_manifest.dart
lib/services/: identity_service.dart  ipfs_service.dart  plugin_loader.dart  plugin_verifier.dart
src/: crypto.rs  ledger.rs  main.rs  maingenesis.rs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
