[package]
name = "segment_1_1_key_generation"
version = "0.1.0"
edition = "2021"

[dependencies]
# For JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For Cryptography (Identity & Signing)
ed25519-dalek = { version = "1.0.1", features = ["serde"] } 
sha2 = "0.10"
hex = "0.4"
multibase = "0.9"

# For compatible Randomness
rand = "0.7"         
rand_core = "0.5"     
rand_chacha = "0.2"

# 1. Primary KDF (User Password)
argon2 = "0.5.2" 
password-hash = "0.5.0"

# 2. Secondary KDF (Recovery Code)
pbkdf2 = "0.12" 

# 3. For Symmetric Encryption
chacha20poly1305 = "0.10.1"

